[project]
name = "win-wifi-key-securescan"
version = "1.0.0"
package-mode = false
description = "About"
authors = [
    {name = "TouaregCS",email = "touareg.netvor@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pyqt6 (>=6.10.2,<7.0.0)",
    "cryptography (>=46.0.4,<47.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.18.0,<7.0.0)"
]
